# cuda-image-brightness-contrast

./: CMakeLists.txt  README.md  kernel.cu  main.cpp
